# kwon

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  justfile
.github/workflows/: ci.yml
data/: test_jobs_config.toml
scripts/: Dockerfile.e2e  Dockerfile.manual-test  test.py
src/: config.rs  daemon.rs  doctor.rs  install.rs  job.rs  main.rs
